Added CEF binaries and CEF resources and adjusted cmake

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -79,7 +79,22 @@ elseif(OS_WINDOWS)
     endif()
 endif()
 
-set(CEF_LIBRARIES "${PROJECT_SOURCE_DIR}/src/libraries/cef3/bin/linux/x86_64/cef/libcef.so;libcef_dll_wrapper")
+if(BUILD_TARGET_LINUX)
+    if(BUILD_TARGET_X86)
+        set(CEF_LIBRARIES "${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/linux/bin_x86/libcef.so;${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/linux/bin_x86/libffmpegsumo.so")
+    else()
+        set(CEF_LIBRARIES "${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/linux/bin_x86_64/libcef.so;${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/linux/bin_x86_64/libffmpegsumo.so")
+    endif()
+elseif(BUILD_TARGET_WINDOWS)
+    if(BUILD_TARGET_X86)
+        set(CEF_LIBRARIES "${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/windows/lib32/libcef.lib;${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/windows/lib32/cef_sandbox.lib")
+    else()
+        set(CEF_LIBRARIES "${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/windows/lib64/libcef.lib;${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/windows/lib64/cef_sandbox.lib")
+    endif()
+endif()
+if(CEF_LIBRARIES)
+    set(CEF_LIBRARIES "${CEF_LIBRARIES};libcef_dll_wrapper")
+endif()
 
 add_app(${CLIENT_BINARY} ${CLIENT_SOURCES})
 target_link_libs(${CLIENT_BINARY}
