correct cmake install routines deactivated sandbox

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -79,22 +79,32 @@ elseif(OS_WINDOWS)
     endif()
 endif()
 
+set(CMAKE_SKIP_BUILD_RPATH FALSE)
+set(CEF_DLL_LIBRARY "libcef_dll_wrapper")
+set(CEF_BASE_DIR "${PROJECT_SOURCE_DIR}/src/libraries/cef3")
+set(ICUDTL_DAT "${CEF_BASE_DIR}/Resources/icudtl.dat")
 if(BUILD_TARGET_LINUX)
+    set(CEF_LINUX_DIR "${CEF_BASE_DIR}/cef_bin/linux")
     if(BUILD_TARGET_X86)
-        set(CEF_LIBRARIES "${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/linux/bin_x86/libcef.so;${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/linux/bin_x86/libffmpegsumo.so")
+        set(CEF_LINUX_X86_DIR "${CEF_LINUX_DIR}/bin_x86")
+        set(CEF_LIBRARY "${CEF_LINUX_X86_DIR}/libcef.so")
+        set(FFMPEGSUMO_LIBRARY "${CEF_LINUX_X86_DIR}/libffmpegsumo.so")
+        set(CHROME_SANDBOX_BIN "${CEF_LINUX_X86_DIR}/chrome-sandbox")
     else()
-        set(CEF_LIBRARIES "${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/linux/bin_x86_64/libcef.so;${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/linux/bin_x86_64/libffmpegsumo.so")
+        set(CEF_LINUX_X86_64_DIR "${CEF_LINUX_DIR}/bin_x86_64")
+        set(CEF_LIBRARY "${CEF_LINUX_X86_64_DIR}/libcef.so")
+        set(FFMPEGSUMO_LIBRARY "${CEF_LINUX_X86_64_DIR}/libffmpegsumo.so")
+        set(CHROME_SANDBOX_BIN "${CEF_LINUX_X86_64_DIR}/chrome-sandbox")
     endif()
 elseif(BUILD_TARGET_WINDOWS)
     if(BUILD_TARGET_X86)
-        set(CEF_LIBRARIES "${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/windows/lib32/libcef.lib;${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/windows/lib32/cef_sandbox.lib")
+        set(CEF_LIBRARY "${CEF_BASE_DIR}/cef_bin/windows/lib32/libcef.lib")
     else()
-        set(CEF_LIBRARIES "${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/windows/lib64/libcef.lib;${PROJECT_SOURCE_DIR}/src/libraries/cef3/cef_bin/windows/lib64/cef_sandbox.lib")
+        set(CEF_LIBRARY "${CEF_BASE_DIR}/cef_bin/windows/lib64/libcef.lib")
     endif()
 endif()
-if(CEF_LIBRARIES)
-    set(CEF_LIBRARIES "${CEF_LIBRARIES};libcef_dll_wrapper")
-endif()
+
+set(CEF_LIBRARIES "${CEF_DLL_LIBRARY};-Wl,-rpath,. ${CEF_LIBRARY}")
 
 add_app(${CLIENT_BINARY} ${CLIENT_SOURCES})
 target_link_libs(${CLIENT_BINARY}
@@ -108,3 +118,8 @@ config_net(${CLIENT_BINARY})
 config_rpc(${CLIENT_BINARY})
 config_util(${CLIENT_BINARY})
 config_muparser(${CLIENT_BINARY})
+
+file(COPY ${CEF_LIBRARY} DESTINATION ${INSTALL_RUNTIME_DIR})
+file(COPY ${FFMPEGSUMO_LIBRARY} DESTINATION ${INSTALL_RUNTIME_DIR})
+file(COPY ${CHROME_SANDBOX_BIN} DESTINATION ${INSTALL_RUNTIME_DIR})
+file(COPY ${ICUDTL_DAT} DESTINATION ${INSTALL_RUNTIME_DIR})
