--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - sudo apt-get -y install mingw32
   - sudo apt-get -y install libboost-regex1.55-dev libboost-system1.55-dev
   - (cd /tmp/; svn co http://svn.boost.org/svn/boost/trunk/boost boost --depth empty; cd boost; svn up asio asio.hpp; sudo cp -r * /usr/include/boost)
+  - sudo apt-get -y install libprotobuf-dev protobuf-compiler
   - sudo apt-get -y install gcc-4.9 g++-4.9 clang-3.5
 
 script:
