--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -87,11 +87,13 @@ if(BUILD_TARGET_LINUX)
     set(CEF_LINUX_DIR "${CEF_BASE_DIR}/cef_bin/linux")
     if(BUILD_TARGET_X86)
         set(CEF_LINUX_X86_DIR "${CEF_LINUX_DIR}/bin_x86")
+        set(UDEV_LIBRARY "${CEF_LINUX_X86_DIR}/libudev.so")
         set(CEF_LIBRARY "${CEF_LINUX_X86_DIR}/libcef.so")
         set(FFMPEGSUMO_LIBRARY "${CEF_LINUX_X86_DIR}/libffmpegsumo.so")
         set(CHROME_SANDBOX_BIN "${CEF_LINUX_X86_DIR}/chrome-sandbox")
     else()
         set(CEF_LINUX_X86_64_DIR "${CEF_LINUX_DIR}/bin_x86_64")
+        set(UDEV_LIBRARY "${CEF_LINUX_X86_64_DIR}/libudev.so")
         set(CEF_LIBRARY "${CEF_LINUX_X86_64_DIR}/libcef.so")
         set(FFMPEGSUMO_LIBRARY "${CEF_LINUX_X86_64_DIR}/libffmpegsumo.so")
         set(CHROME_SANDBOX_BIN "${CEF_LINUX_X86_64_DIR}/chrome-sandbox")
@@ -104,7 +106,7 @@ elseif(BUILD_TARGET_WINDOWS)
     endif()
 endif()
 
-set(CEF_LIBRARIES "${CEF_DLL_LIBRARY};-Wl,-rpath,. ${CEF_LIBRARY}")
+set(CEF_LIBRARIES "${CEF_DLL_LIBRARY};-Wl,-rpath,. ${CEF_LIBRARY};-Wl,-rpath,. ${UDEV_LIBRARY}")
 
 add_app(${CLIENT_BINARY} ${CLIENT_SOURCES})
 target_link_libs(${CLIENT_BINARY}
@@ -119,6 +121,9 @@ config_rpc(${CLIENT_BINARY})
 config_util(${CLIENT_BINARY})
 config_muparser(${CLIENT_BINARY})
 
+message(STATUS "UDEV_LIBRARY ${UDEV_LIBRARY}")
+
+file(COPY ${UDEV_LIBRARY} DESTINATION ${INSTALL_RUNTIME_DIR})
 file(COPY ${CEF_LIBRARY} DESTINATION ${INSTALL_RUNTIME_DIR})
 file(COPY ${FFMPEGSUMO_LIBRARY} DESTINATION ${INSTALL_RUNTIME_DIR})
 file(COPY ${CHROME_SANDBOX_BIN} DESTINATION ${INSTALL_RUNTIME_DIR})
