Added support for multiple transparent layers, each is a separate "browser"

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -50,11 +50,20 @@ prepend(CLIENT_SOURCES_FPSGAME ${SOURCE_DIR}/fpsgame
     waypoint.cpp
     weapon.cpp)
 
+set(CLIENT_SOURCES_UI
+    ${CMAKE_CURRENT_SOURCE_DIR}/../ui/cefapp
+    ${CMAKE_CURRENT_SOURCE_DIR}/../ui/cefrenderhandler
+    ${CMAKE_CURRENT_SOURCE_DIR}/../ui/cefclienthandler
+    ${CMAKE_CURRENT_SOURCE_DIR}/../ui/ceflayer
+    ${CMAKE_CURRENT_SOURCE_DIR}/../ui/cefmouse
+    ${CMAKE_CURRENT_SOURCE_DIR}/../ui/cefrequestcontexthandler
+
 set(CLIENT_SOURCES_CEFDLL
     ${CMAKE_CURRENT_SOURCE_DIR}/../libraries/cef3/libcef_dll
 )
 
 set(CLIENT_SOURCES
+  ${CLIENT_SOURCES_UI}
   ${CLIENT_SOURCES_CEFDLL}
   ${CLIENT_SOURCES_ENGINE}
   ${CLIENT_SOURCES_FPSGAME}
