--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -50,6 +50,8 @@ set(CLIENT_SOURCES_ENGINE
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/RelationshipInstance
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/RelationshipType
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/TypeBase
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/type/Teleporter
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/type/Teledest
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/grass
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/main
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/material
