--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,7 @@ if(MSVC)
     endif()
 else()
     set(BUILD_C_FLAGS "-fomit-frame-pointer -Wall -fsigned-char")
-    set(BUILD_CXX_FLAGS "-fno-exceptions -fno-rtti")
+    set(BUILD_CXX_FLAGS "-fno-rtti")
     set(BUILD_DEBUG_FLAGS   "${BUILD_FLAGS} -O0 -g -D_DEBUG -DBUILD_DEBUG")
     set(BUILD_RELEASE_FLAGS "${BUILD_FLAGS} -O3 -DNDEBUG -DBUILD_NO_DEBUG")
 endif()
