Added muparser library as a git submodule Muparser is an extensible high performance math expression parser library Original source: http://muparser.googlecode.com/svn/trunk/ Git repository: https://github.com/inexor-game/muparser

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -61,9 +61,12 @@ if(${LOCAL_ENET})
     add_subdirectory(libraries/enet)
 endif()
 
+set(MUPARSER_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src/libraries/muparser/include")
+
 include_directories(
     ${ENET_INCLUDE_DIRS}
     ${SDL2_INCLUDE_DIRS}
+    ${MUPARSER_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/shared
     ${CMAKE_CURRENT_SOURCE_DIR}/engine
