--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = src/platform_osx
 	url = https://github.com/Theintercooler/Platform-osx.git
 	branch = master
+[submodule "src/libraries/muparser"]
+	path = src/libraries/muparser
+	url = https://github.com/inexor-game/muparser.git
+	branch = master
