Readd McStreamChopper (iostream  message connect)
This also adds the associated tests, for which in turni we
provide generic tests for a Duplex Message connect,
a simplex message connect and some generic helpers for the
net module tests.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -7,6 +7,8 @@ link_directories(${GTEST_LIB_DIR})
 
 add_app(${TEST_BINARY} ${TEST_MODULE_SOURCES})
 
+config_net(${TEST_BINARY})
+config_util(${TEST_BINARY})
 config_gtest(${TEST_BINARY})
 
 target_link_libraries_wrapper(${TEST_BINARY} ${ADDITIONAL_LIBRARIES})
