Added model renderer; Added roll modifier; Added methods for creating render instances with model and offset parameters; Create thread names for emitter and modifier workers

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -75,9 +75,11 @@ set(CLIENT_SOURCES_ENGINE
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/ParticleSubsystem
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/emitter/Point
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/initializer/RandomVelocity
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/modifier/Rolling
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/modifier/VelocityTransformation
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/modifier/VectorField
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/renderer/Billboard
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/renderer/Model
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/worker/ParticleWorker
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/worker/EmitterWorker
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/entity/subsystem/particle/worker/ModifierWorker
